--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/samples": "^2.0.2",
+    "clamp": "1.0.1",
+    "dog-names": "^1.0.2",
     "expo": "19.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "https://github.com/expo/react-native/archive/sdk-19.0.0.tar.gz",
